Update all the guis